    everything except the DYNAMIC-EXTENT case, which used to emit a
    STYLE-WARNING, but these diagnostics got lost in a refactoring since
    sbcl-2.2.2)
  * minor incompatible change: literal objects (strings, in particular)
    in compiled code may at the discretion of the runtime be placed in
    read-only memory. Violations of CLHS 3.7.1 could produce memory faults.
  * enhancement: Unicode support has been updated to support version 10.0.0 of
    the Unicode standard, including addition of characters and refinements to
    breaking and collation algorithms.
  * optimization: faster TRUNCATE with float arguments.

changes in sbcl-2.2.6 relative to sbcl-2.2.5:
  * minor incompatible change: support for 32-bit x86 on macOS has been
    removed.
  * new contrib: sb-simd, to provide a convenient interface for SIMD
    programming on x86-64.  (Thanks to Marco Heisig and other sb-simd
    contributors)
  * enhancement: core compression now uses zstd instead of zlib.  (lp#1881089)
  * enhancement: provide compiler warnings for specialized array type
    mismatches in CONCATENATE.
  * enhancement: provide compiler warnings for bad sequence bounding index
    designator arguments to sequence functions.
  * enhancement: The sb-mpfr contrib now allows coercion from MPFR-FLOATs
    to CL:RATIONAL.  (Thanks to Robert Smith)
  * bug fix: fix compilation failure related to declaiming types of constants.
    (lp#1977726, reported by Pierre Neidhardt)
  * bug fix: fix race condition in CLOS optimized constructors.  (lp#1951341)
  * bug fix: fix too-eager elision of allocation barriers when initializing
    closure and structure objects.
  * optimization: fasl files are now usually smaller (up to 10% on default
    policy) and may load faster, especially on high debug.
  * optimization: faster string comparisons on arm64, x86-64.
  * optimization: faster [n]string-down/upcase on arm64, x86-64.
  * optimization: faster [n]reverse for 8- and 32-bit element vectors on